--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Front end upload “tosser” for penny-collector.",
   "main": "index.js",
   "scripts": {
+    "start": "node webpack.server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,29 @@
   "bugs": {
     "url": "https://github.com/MRN-Code/penny-toss/issues"
   },
-  "homepage": "https://github.com/MRN-Code/penny-toss#readme"
+  "homepage": "https://github.com/MRN-Code/penny-toss#readme",
+  "dependencies": {
+    "history": "^1.15.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.2",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.1.4",
+    "redux-router": "^0.1.0",
+    "redux-thunk": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^5.6.18",
+    "babel-loader": "^5.1.4",
+    "babel-plugin-react-transform": "^1.1.1",
+    "express": "^4.13.3",
+    "react-transform-hmr": "^1.0.1",
+    "redux-devtools": "^2.1.5",
+    "redux-devtools-dock-monitor": "^1.0.0-beta-3",
+    "redux-devtools-log-monitor": "^1.0.0-beta-3",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
+  }
 }
