--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/MRN-Code/penny-toss#readme",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "history": "^1.15.0",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
@@ -37,11 +39,14 @@
     "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.1",
+    "css-loader": "^0.23.0",
     "express": "^4.13.3",
+    "file-loader": "^0.8.5",
     "react-transform-hmr": "^1.0.1",
     "redux-devtools": "^2.1.5",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
