--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-router": "^1.0.2",
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
-    "redux-router": "^0.1.0",
+    "redux-router": "^1.0.0-beta3",
     "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
