--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "homepage": "https://github.com/MRN-Code/penny-toss#readme",
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "filesize": "^3.1.4",
     "history": "^1.15.0",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
+    "react-dropzone": "^3.2.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
+    "react-router-bootstrap": "^0.19.3",
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
     "redux-router": "^1.0.0-beta3",
