--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "bootstrap": "^3.3.6",
     "filesize": "^3.1.4",
     "history": "^1.15.0",
+    "install": "^0.4.1",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
+    "npm": "^3.5.1",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-bootstrap-table": "^1.3.0",
     "react-dom": "^0.14.3",
     "react-dropzone": "^3.2.2",
     "react-redux": "^4.0.0",
