--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.1.2",
     "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.1",
     "css-loader": "^0.23.0",
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
+    "postcss-loader": "^0.8.0",
     "react-transform-hmr": "^1.0.1",
     "redux-devtools": "^2.1.5",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
