--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://github.com/MRN-Code/penny-toss#readme",
   "dependencies": {
+    "axios": "^0.7.0",
+    "bluebird": "^3.0.6",
     "bootstrap": "^3.3.6",
     "filesize": "^3.1.4",
     "history": "^1.15.0",
     "install": "^0.4.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "npm": "^3.5.1",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-bootstrap-datetimepicker": "0.0.22",
@@ -42,7 +43,8 @@
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
     "redux-router": "^1.0.0-beta3",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "tus-js-client": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.1.2",
