--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bluebird": "^3.0.6",
     "bootstrap": "^3.3.6",
     "filesize": "^3.1.4",
-    "history": "^1.15.0",
+    "history": "^1.13.0",
     "install": "^0.4.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
@@ -56,7 +56,7 @@
     "file-loader": "^0.8.5",
     "postcss-loader": "^0.8.0",
     "react-transform-hmr": "^1.0.1",
-    "redux-devtools": "^2.1.5",
+    "redux-devtools": "^3.0.0-beta-3",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
     "style-loader": "^0.13.0",
